derive/tests/compile_fail/unsupported_untagged.rs
use config_derive::Deserialize;

#[derive(Deserialize)]
#[serde(untagged)]
struct MyStruct {
    field: String,
}

fn main() {}
