derive/tests/compile_fail/unsupported_untagged.stderr
error: config::Deserialize does not support #[serde(untagged)]
 --> tests/compile_fail/unsupported_untagged.rs:4:9
  |
4 | #[serde(untagged)]
  |         ^^^^^^^^
